@@ -65,6 +65,7 @@ Lua:
    the engine decide, returning false will force the engine to disallow transportation (for this specific call).
  - new unit rules param access level, 'typed': between 'inlos' and 'inradar', applicable when the unit has once been in LoS
    and continuously in radar since (same rule as `GetUnitLosState(x).typed` and typed engine icons)
+ - the `Engine` table contains `gameSpeed` and `squareSize` (same as in `Game`)
 
 
 AI:
